[package]
name = "reactor"
version = "0.1.0"
authors = ["terepy"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.24"
wasm-bindgen = "0.2.47"

[dependencies.array_tuple]
git = "https://github.com/pypypypypypypypypyp/array_tuple"

[dependencies.math_lib]
git = "https://github.com/pypypypypypypypypyp/math_lib"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'MouseEvent',
	'EventTarget',
	'HtmlImageElement',
	'HtmlElement',
	'WebGlTexture',
	'WebGlUniformLocation',
	'console',
	'Document',
	'Element',
	'HtmlCanvasElement',
	'WebGlBuffer',
	'WebGl2RenderingContext',
	'WebGlProgram',
	'WebGlShader',
	'Window',
]
